# UnicodeFontSet-magisk-module

./: .gitattributes  .gitignore  LICENSE  README.en.md  README.md  action.sh  common_functions.sh  customize.sh  module.prop  rust-project.json  service.sh  uninstall.sh  update-cbdt.json  update-colrv1.json  update.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  main.yml
config/: fonts_fragment.xml
docs/: LICENSES.md
documentation/: CREDITS.md  LICENSES.md  check_fonts_unicode.py  font_unicode_coverage.py
extra/: changelog.md
font-source/: ArchaicCuneiformNumerals.fcp  UFSEmoji-Ext.toml  UFSTempAlpha.fcp  UFSZero-Ext.fcp
font-source/ufo/ArchaicCuneiformNumerals-Regular.ufo/: features.fea  fontinfo.plist  lib.plist
font-source/ufo/UFSZeroExt-Regular.ufo/: features.fea  fontinfo.plist  lib.plist
module/: action.sh  common_functions.sh  customize.sh  module.prop  service.sh  uninstall.sh
module/config/: fonts_fragment.xml
module/lang/: lang.sh  lang_en_US.sh  lang_zh_CN.sh
module/lib/: binary.sh  cmap.sh  const.sh  lang.sh  lib.sh  lock.sh  log.sh  monitor.sh  util.sh  xml.sh
sources/: UFSEmoji-Ext.toml  UFSZero-Ext.fcp
sources/UFSZeroExt-Regular.ufo/: features.fea  lib.plist
sources/UFSZeroExt-Regular.ufo/glyphs/: A_rkab-beriaerfe.glif  D_arbai-beriaerfe.glif  D_jai-beriaerfe.glif  E_h-beriaerfe.glif  E_rigo-beriaerfe.glif  (+189 more)
system/fonts/: Unicode.7z
tools/: check_fonts_unicode.py  font_unicode_coverage.py  merge_fonts.sh
tools/font-cmap-cleaner/: Cargo.toml  whitelist.txt
tools/font-cmap-cleaner/src/: fonts_xml.rs  lib.rs  main.rs  rewrite.rs  scan.rs  trace_init.rs
tools/font-cmap-cleaner/tests/: test_cli.rs  test_fonts_xml.rs  test_rewrite.rs  test_scan.rs
tools/font-cmap-cleaner/tests/fixtures/: fonts.xml
tools/fonts/: OFL.txt  urls.txt
tools/python/: check_fonts_unicode.py  font_unicode_coverage.py  fontdiff.py
(+651 files in other folders)
