[package]
name = "font-cmap-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ttf-parser = "0.25.1"
read-fonts = { git = "https://github.com/googlefonts/fontations", branch = "cff-sfnt" }
write-fonts = { git = "https://github.com/googlefonts/fontations", branch = "cff-sfnt" }
walkdir = "2.4"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
quick-xml = "0.38.4"

[profile.release]
lto = true
debug = false
opt-level = "z"
codegen-units = 1
panic = "unwind"
strip = true
